# Day1-Basic-Voice-Agent

./: .env  .gitignore  README.md  info.md  livekit_basic_agent.py  main.py  pyproject.toml
